# vertex_ai_mcp_samples

./: .gitignore  README.md  bq.py  bq_script.py  bq_script2.py  build_mcp_server_by_gemini.ipynb  create_mcp_server_by_gemini.ipynb  develop_mcp_with_gemini_and_adk.ipynb  finnhub_swagger.json  intro_to_MCP_with_vertexai.ipynb  med.py  nih.py  util.py
a2a-mcp-app-old/: README.md
a2a-mcp-app-old/airbnb_agent/: pyproject.toml  test_client.py
a2a-mcp-app-old/host_agent/: Dockerfile  app.py  pyproject.toml
a2a-mcp-app-old/weather_agent/: pyproject.toml
a2a-mcp-app-old/weather_agent_preload/: README.md  custom_mcp_toolset.py
a2a-mcp-app2/: README.md
a2a-mcp-app2/airbnb_agent/: README.md
a2a-mcp-app2/weather_agent_preload/: __main__.py  adk_agent.py
a2a-python-sdk-0515/: README.md
a2a-python-sdk-0515/examples/airbnb_agent/: __main__.py  agent.py  agent_executor.py  pyproject.toml  (+1 more)
a2a-python-sdk-0515/examples/airbnb_agent copy/: __main__.py  agent.py  agent_executor.py
adk-web-mcp-sse/: README.md  pyproject.toml
adk-web-mcp-sse/adk_multiagent_mcp_app/: agent.py  prompts.py
adk-web-ui/: README.md  pyproject.toml
adk-web-ui/adk_multiagent_mcp_app/: __init__.py  agent.py
adk_mcp_app/: README.md  main.py  pyproject.toml
adk_mcp_app/static/: index copy.html  index.html  user_guide.md
adk_multiagent_mcp_app/: Dockerfile  README.md  main.py  requirements.txt
adk_multiagent_mcp_app/static/: index.html  user_guide.md
adk_multiagent_mcp_app_old/: main.py
server/: bq.py  cocktail.py  cocktail2.py  med.py  nih.py  weather_psedo.py
util/: util.py
(+26 files in other folders)
